# force-reconstruction

./: CMakeLists.txt  README.md
context/: forceReconstruction.ini
contexts/: forceReconstruction.ini  forceReconstruction_fr100.ini  forceReconstruction_fr50.ini  forceReconstruction_fr75.ini  forceReconstruction_icra25.ini  icubLeft_fr100.ini  icubRight_fr100.ini  simLeft_fr100.ini  simRight_fr100.ini
src/: forcereconstruction.cpp  forcereconstruction.h  main.cpp
yarpscope/: force.xml  forceTaxel_leftIndex.xml  forceTaxel_rightIndex.xml
